# web-crawler

./: .flake8  .gitignore  README.md  main.py  pyproject.toml
tests/: conftest.py  test_atomic_count.py  test_datastore.py  test_locked_set.py  test_looping_thread.py  test_utils.py  test_web_crawler.py
tests/config/: test_config.py
tests/fixtures/: test_valid_config.yml
tests/validators/: test_domain_validator.py  test_dup_validators.py  test_input_validators.py  test_validator_interface.py
tests/workers/: test_fetch_url.py  test_parser.py
web_crawler/: atomic_count.py  crawler.py  datastore.py  execptions.py  fields.py  locked_set.py  loop_thread.py  site_graph.py  utils.py
web_crawler/config/: config.yml  http_config.py
web_crawler/formatter/: output_factory.py  writers.py
web_crawler/queues/: queue_impl.py  queue_interfaces.py
web_crawler/validators/: domain_validator.py  duplicate_validators.py  input_validator.py  validator_interface.py
web_crawler/workers/: fetch_worker.py  fetcher.py  parser.py  parser_worker.py  worker_interface.py
